--- a/server/configure.in
+++ b/server/configure.in
@@ -520,10 +520,11 @@ yes
 AC_CHECK_HEADERS([arpa/inet.h fcntl.h float.h limits.h malloc.h memory.h netdb.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/param.h sys/socket.h sys/time.h unistd.h])
 
 
-# Expat support: search for the library, then expat.h.
-# Let the user choose to enable expat or not
+
+dnl Let the user choose to enable expat or not.
+dnl Expat support: search for the library, then expat.h.
 AC_ARG_ENABLE([expat],
-        [  --enable-expat	enable XML parsing via the Expat library],
+        [AS_HELP_STRING([--enable-expat], [enable XML parsing via the Expat library @<:@default: yes@:>@])],
         [expat=${enableval}],
         [expat=yes])
 
@@ -536,17 +537,55 @@ if test "x${expat}" = xyes; then
 
       AC_CHECK_HEADERS([expat.h], [], [have_expat=no])
 
-      fi
+   fi
 
-      if test "x${have_expat}" = xno; then
-      AC_MSG_WARN([
+   if test "x${have_expat}" = xno; then
+      AC_MSG_ERROR([
   ----------------------------------------------------
   Unable to find the Expat XML library on this system.
-  Building a moo server without XML support.
   ----------------------------------------------------])
-  fi
+   fi
+else
+  AC_MSG_NOTICE([The Expat XML library will not be included in this build])
 fi
 
+dnl Include (or don't) the ext-FUP extension for manipulating external files
+AC_ARG_ENABLE([fup],
+        [AS_HELP_STRING([--enable-fup],	[Include the ext-FUP extension for manipulating external files])],
+        [fup=${enableval}],
+        [fup=no])
+
+if test "x${fup}" = xyes; then
+   AC_MSG_NOTICE([ext-FUP file manipulation package enabled])
+   AC_DEFINE([USE_EXT_FUP], 1, [ext-FUP external file manipulation enabled])
+else
+   AC_MSG_NOTICE([The ext-FUP file manipulation extension will not be included in this build])
+fi
+
+dnl currently this block is no bueno. --sw
+dnl # let the user choose to enable ssl or not
+dnl AC_ARG_ENABLE([ssl],
+dnl         [  --enable-ssl	enable ssl (Secure Socket Layers) (experimental)],
+dnl         [ssl=${enableval}],
+dnl         [ssl=no])
+
+
+dnl if test "x${ssl}" = xyes; then
+dnl    have_openssl=no
+dnl    AC_CHECK_LIB([openssl], [have_openssl=yes])
+
+dnl    if test "x${have_openssl}" = xyes; then
+dnl       AC_CHECK_HEADERS([openssl/ssl.h])
+dnl       AC_CHECK_HEADERS([openssl/err.h])
+dnl    fi
+dnl       if test "x${have_openssl}" = xno; then
+dnl       AC_MSG_WARN([
+dnl   ----------------------------------------------------
+dnl   Unable to find the openssl library on this system.
+dnl   Building a moo server without SSL support.
+dnl   ----------------------------------------------------])
+dnl       fi
+dnl fi
 
 
 AC_C_INLINE
@@ -570,6 +609,7 @@ echo "| *not* work on your system:"
 echo "|"
 echo "|   $NETWORK_CONFIGURATIONS"
 echo "----------------------------------------------------------------------"
+
 
 AC_OUTPUT(Makefile)
 
